[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Gameplay/Game_camera.gd" type="Script" id=1]

[node name="Game_camera" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="Shake_tween" type="Tween" parent="."]

[node name="Hitstop_tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
